Réorganisation du code

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Exercice Html</title>
-    <h1>Exercice Html 1</h1>
-    <p>Ceci est le premier exercice</p>
   </head>
   <body>
-
+    <h1>Exercice Html 1</h1>
+    <p>
+      Ceci est le premier exercice
+    </p>
   </body>
 </html>
